--- a/samples/vuforia-sample-10-7-2/Android/app/build.gradle
+++ b/samples/vuforia-sample-10-7-2/Android/app/build.gradle
@@ -63,10 +63,13 @@ android {
             version "3.10.2"
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/MoverioSDK_1.0.1.aar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
